--- a/i18n/contents+el.po
+++ b/i18n/contents+el.po
@@ -180,6 +180,11 @@ msgid ""
 "relay in the circuit (the “exit relay”) then sends the traffic out onto the "
 "public Internet."
 msgstr ""
+"* Το Tor είναι ένα δίκτυο εικονικών σηράγγων που σας επιτρέπει να βελτιώσετε "
+"το απόρρητο και την ασφάλειά σας στο Διαδίκτυο. Το Tor λειτουργεί "
+"αποστέλλοντας την κυκλοφορία σας μέσω τριών τυχαίων διακομιστών (επίσης "
+"γνωστών ως *κόμβοι*) στο δίκτυο Tor. Το τελευταίο ρελέ στο κύκλωμα (ο "
+"\"κόμβος εξόδου\") στέλνει τότε την κυκλοφορία στο δημόσιο διαδίκτυο."
 
 #: http://localhost/managing-identities/
 #: (content/managing-identities/contents+en.lr:topic.body)
@@ -295,6 +300,10 @@ msgid ""
 "valid for a single session (until Tor Browser is exited or a <a href=\"/"
 "managing-identities.html#new-identity\">New Identity</a> is requested)."
 msgstr ""
+"Από προεπιλογή, ο Tor Browser δεν κρατά κανένα ιστορικό περιήγησης. Τα "
+"cookies είναι έγκυρα μόνο για μια συνεδρία (μέχρι να κλείσει ο Tor Browser ή "
+"να ζητηθεί μια <a href=\"managing-identities#new-identity\">Νέα Ταυτότητα</"
+"a>)."
 
 #: http://localhost/managing-identities/
 #: (content/managing-identities/contents+en.lr:topic.body)
@@ -451,6 +460,10 @@ msgid ""
 "but not yet fixed. Please check the <a href=\"/known-issues\">Known Issues</"
 "a> page to see if the problem you are experiencing is already listed there."
 msgstr ""
+"Ο περιηγητής Tor είναι συνεχώς υπό κατασκευή και κάποια ζητήματα μας είναι "
+"γνωστά αλλά δεν έχουν λυθεί ακόμη. Παρακαλούμε, δες τη σελίδα<a href=\"known-"
+"issues\">Γνωστά Ζητήματα</a>για να επιβεβαιώσεις αν το ζήτημα που "
+"αντιμετωπίζεις βρίσκεται ήδη στη λίστα μας."
 
 #: http://localhost/secure-connections/
 #: (content/secure-connections/contents+en.lr:topic.body)
@@ -592,6 +605,13 @@ msgid ""
 "combination with pluggable transports helps to disguise the fact that you "
 "are using Tor."
 msgstr ""
+"Τα περισσότερα <a href=\"transports\">Pluggable Transports</a>, όπως το "
+"obfs3 και το obfs4, βασίζονται στη χρήση κόμβων \"γέφυρας\". Όπως και με "
+"τους συνηθισμένους κόμβους Tor, οι γέφυρες διαχειρίζονται από εθελοντές. "
+"αντίθετα από τους συνηθισμένους κόμβους, ωστόσο, δεν καταχωρούνται δημόσια, "
+"οπότε ο αντίπαλος δεν μπορεί να τα αναγνωρίσει εύκολα. Η χρήση γεφυρών σε "
+"συνδυασμό με τα pluggable transports βοηθά να συγκαλύψει το γεγονός ότι "
+"χρησιμοποιείτε Tor."
 
 #: http://localhost/managing-identities/
 #: (content/managing-identities/contents+en.lr:topic.body)
@@ -902,6 +922,13 @@ msgid ""
 "then be taken to the <a href=\"/circumvention\">Circumvention</a> screen to "
 "configure a pluggable transport."
 msgstr ""
+"Η πρώτη οθόνη ρωτά εάν η πρόσβαση στο δίκτυο Tor είναι αποκλεισμένη ή "
+"λογοκρίνεται η σύνδεσή σας. Εάν δεν πιστεύετε ότι συμβαίνει αυτό, επιλέξτε "
+"\"Όχι\". Αν γνωρίζετε ότι η σύνδεσή σας υπόκειται σε λογοκρισία ή έχετε "
+"δοκιμάσει και αποτύχατε να συνδεθείτε στο δίκτυο Tor και δεν έχει δουλέψει "
+"καμία άλλη λύση, επιλέξτε \"Ναι\". Στη συνέχεια, θα μεταφερθείτε στην οθόνη "
+"<a href=\"circumvention\">Παράκαμψη</a> για να διαμορφώσετε ένα pluggable "
+"transport.."
 
 #: http://localhost/updating/
 #: (content/updating/contents+en.lr:topic.description)
@@ -1072,6 +1099,12 @@ msgid ""
 "transports”. See the <a href=\"/transports\">Pluggable Transports</a> page "
 "for more information on the types of transport that are currently available."
 msgstr ""
+"Η άμεση πρόσβαση στο δίκτυο Tor μπορεί μερικές φορές να παρεμποδίζεται από "
+"τον Πάροχο Υπηρεσιών Διαδικτύου (ISP) ή από κάποια κυβέρνηση. Ο Tor Browser "
+"περιλαμβάνει ορισμένα εργαλεία για την παράκαμψη των φραγμών αυτών. Αυτά τα "
+"εργαλεία ονομάζονται \"pluggable transports\". Για περισσότερες πληροφορίες "
+"σχετικά με τους τύπους των transport που είναι διαθέσιμα αυτήν τη στιγμή, "
+"ανατρέξτε στη σελίδα <a href=\"transports\">Pluggable Transports</a>."
 
 #: http://localhost/secure-connections/
 #: (content/secure-connections/contents+en.lr:topic.body)
@@ -1153,6 +1186,10 @@ msgid ""
 "way (for more details, see the <a href=\"/transports\">Pluggable Transports</"
 "a> page), and their effectiveness depends on your individual circumstances."
 msgstr ""
+"Κάθε ένα από τα transports που αναγράφονται στο μενού του Tor Launcher "
+"λειτουργεί με διαφορετικό τρόπο (για περισσότερες λεπτομέρειες, ανατρέξτε "
+"στη σελίδα <a href=\"transports\">Pluggable Transports</a>) και η "
+"αποτελεσματικότητά τους εξαρτάται από την περίπτωσή σας."
 
 #: http://localhost/downloading/
 #: (content/downloading/contents+en.lr:topic.body)
@@ -1633,6 +1670,10 @@ msgid ""
 "need to enter bridge addresses manually. Read the <a href=\"/bridges/"
 "\">Bridges</a> section to learn what bridges are and how to obtain them."
 msgstr ""
+"* Αν δοκιμάσετε όλες αυτές τις λύσεις, και παρ' όλα αυτά δεν καταφέρατε να "
+"συνδεθείτε, θα χρειαστεί να καταχωρίσετε χειροκίνητα τις διευθύνσεις "
+"γέφυρας. Διαβάστε την ενότητα <a href=\"bridges\"> Γέφυρες</a> για να μάθετε "
+"τι είναι οι γέφυρες και πώς να τις αποκτήσετε."
 
 #: http://localhost/managing-identities/
 #: (content/managing-identities/contents+en.lr:topic.body)
@@ -1646,6 +1687,8 @@ msgid ""
 "Most <a href=\"/transports\">Pluggable Transports</a>, such as obfs3 and "
 "obfs4, rely on the use of “bridge” relays."
 msgstr ""
+"Τα περισσότερα <a href=\"transports\">Pluggable Transports</a>, όπως το "
+"obfs3 και το obfs4, βασίζονται στη χρήση κόμβων \"γέφυρας\"."
 
 #: http://localhost/transports/ (content/transports/contents+en.lr:topic.body)
 msgid "</table>"
@@ -1658,6 +1701,10 @@ msgid ""
 "censoring connections to the Tor network. Read the <a href=\"/circumvention"
 "\">Circumvention</a> section for possible solutions."
 msgstr ""
+"Εάν εξακολουθείτε να μην μπορείτε να συνδεθείτε, ο Πάροχος Υπηρεσιών "
+"Διαδικτύου (ISP) ενδέχεται να λογοκρίνει τις συνδέσεις στο δίκτυο Tor. "
+"Διαβάστε την ενότητα <a href=\"circumvention\">Παράκαμψη</a> για πιθανές "
+"λύσεις."
 
 #: http://localhost/transports/ (content/transports/contents+en.lr:topic.body)
 msgid ""
@@ -1710,6 +1757,8 @@ msgid ""
 "Pluggable transports are tools that Tor can use to disguise the traffic it "
 "sends out."
 msgstr ""
+"Τα Pluggable transports είναι εργαλεία τα οποία μπορεί να χρησιμοποιήσει ο "
+"Tor για να κρύψει την κίνηση που εκπέμπει."
 
 #: http://localhost/security-slider/
 #: (content/security-slider/contents+en.lr:topic.body)
@@ -1812,6 +1861,9 @@ msgid ""
 "connecting to <a href=\"http://3g2upl4pq6kufc4m.onion/\">DuckDuckGo's Onion "
 "Service</a>"
 msgstr ""
+"Μπορείτε επίσης να εξασφαλίσετε ότι έχετε πρόσβαση σε άλλες υπηρεσίες onion, "
+"με σύνδεση στο <a href=\"http://3g2upl4pq6kufc4m.onion/\">DuckDuckGo's Onion "
+"Service</a>"
 
 #: http://localhost/bridges/ (content/bridges/contents+en.lr:topic.body)
 msgid ""
@@ -1921,6 +1973,13 @@ msgid ""
 "href=\"/troubleshooting\">Troubleshooting</a> page for help solving the "
 "problem."
 msgstr ""
+"Στις περισσότερες περιπτώσεις, επιλέγοντας τη \"Σύνδεση\" θα σας επιτρέψει "
+"να συνδεθείτε στο δίκτυο Tor χωρίς περαιτέρω παραμετροποίηση. Όταν το "
+"πατήσετε, θα εμφανιστεί μια μπάρα κατάστασης που θα σας δείχνει την πορεία "
+"της σύνδεσης του Tor. Αν χρησιμοποιείτε μια αρκετά γρήγορη σύνδεση στο "
+"διαδίκτυο αλλά αυτή η μπάρα φαίνεται να έχει κολλήσει σε κάποιο σημείο, "
+"δείτε την σελίδα <a href=\"troubleshooting\">Αντιμετώπιση προβλημάτων</a> "
+"για βοήθεια για την επίλυση του προβλήματος"
 
 #: http://localhost/becoming-tor-translator/
 #: (content/becoming-tor-translator/contents+en.lr:topic.body)
