--- a/i18n/contents.pot
+++ b/i18n/contents.pot
@@ -1239,11 +1239,8 @@ msgstr ""
 msgid ""
 "Tor Browser will prompt you to update the software once a new version has "
 "been released: the Torbutton icon will display a yellow triangle, and you "
-"may see a written update indicator when Tor Browser opens."
-msgstr ""
-
-#: http://localhost/updating/ (content/updating/contents+en.lr:topic.body)
-msgid "You can update either automatically or manually."
+"may see a written update indicator when Tor Browser opens. You can update "
+"either automatically or manually."
 msgstr ""
 
 #: http://localhost/updating/ (content/updating/contents+en.lr:topic.body)
@@ -1293,7 +1290,7 @@ msgstr ""
 #: http://localhost/updating/ (content/updating/contents+en.lr:topic.body)
 msgid ""
 "Remove Tor Browser from your system by deleting the folder that contains it "
-"(see the <link xref='uninstalling'>Uninstalling</link> section for more "
+"(see the <a href='uninstalling'>Uninstalling</a> section for more "
 "information)."
 msgstr ""
 
@@ -1352,13 +1349,9 @@ msgstr ""
 #: http://localhost/plugins/ (content/plugins/contents+en.lr:topic.body)
 msgid ""
 "Tor Browser includes an add-on called NoScript, accessible through the “S” "
-"icon at the top-right of the window."
-msgstr ""
-
-#: http://localhost/plugins/ (content/plugins/contents+en.lr:topic.body)
-msgid ""
-"NoScript allows you to control the JavaScript (and other scripts) that runs "
-"on individual web pages, or block it entirely."
+"icon at the top-right of the window. NoScript allows you to control the "
+"JavaScript (and other scripts) that runs on individual web pages, or block "
+"it entirely."
 msgstr ""
 
 #: http://localhost/plugins/ (content/plugins/contents+en.lr:topic.body)
@@ -1370,14 +1363,9 @@ msgid ""
 "Users who require a high degree of security in their web browsing should set "
 "Tor Browser’s <a href=\"/security-slider\">Security Slider</a> to "
 "“Safer” (which disables JavaScript for non-HTTPS websites) or "
-"“Safest” (which does so for all websites)."
-msgstr ""
-
-#: http://localhost/plugins/ (content/plugins/contents+en.lr:topic.body)
-msgid ""
-"However, disabling JavaScript will prevent many websites from displaying "
-"correctly, so Tor Browser’s default setting is to allow all websites to run "
-"scripts in \"Standard\" mode."
+"“Safest” (which does so for all websites). However, disabling JavaScript "
+"will prevent many websites from displaying correctly, so Tor Browser’s "
+"default setting is to allow all websites to run scripts in \"Standard\" mode."
 msgstr ""
 
 #: http://localhost/plugins/ (content/plugins/contents+en.lr:topic.body)
