--- a/packages/i18n/lektor_i18n.egg-info/SOURCES.txt
+++ b/packages/i18n/lektor_i18n.egg-info/SOURCES.txt
@@ -1,5 +1,6 @@
 README
 lektor_i18n.py
+setup.py
 lektor_i18n.egg-info/PKG-INFO
 lektor_i18n.egg-info/SOURCES.txt
 lektor_i18n.egg-info/dependency_links.txt
