--- a/i18n/contents.pot
+++ b/i18n/contents.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-22 18:19+CET\n"
+"POT-Creation-Date: 2021-06-22 19:43+CET\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: en <LL@li.org>\n"
@@ -134,7 +134,7 @@ msgstr ""
 #: (content/menu/contents+en.lr:topic.body)
 #: https://tb-manual.torproject.org/known-issues/
 #: (content/known-issues/contents+en.lr:topic.description)
-msgid "Known issues"
+msgid "Known Issues"
 msgstr ""
 
 #: https://tb-manual.torproject.org/menu/
@@ -3417,7 +3417,7 @@ msgid "Edit this page"
 msgstr ""
 
 #: templates/macros/topic.html:25
-msgid "Suggest Feedback"
+msgid "Give Feedback"
 msgstr ""
 
 #: templates/macros/topic.html:26
