--- a/i18n/contents.pot
+++ b/i18n/contents.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-10 15:22+UTC\n"
+"POT-Creation-Date: 2021-12-08 15:23+UTC\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: en <LL@li.org>\n"
@@ -29,7 +29,7 @@ msgid "Privacy is a human right"
 msgstr ""
 
 #: (dynamic)
-msgid "Your donation will be matched by Friends of Tor, up to $150,000."
+msgid "Thank you for helping us reach our $150,000 Friends of Tor match!"
 msgstr ""
 
 #: (dynamic)
